[package]

name = "pb"
version = "0.0.1"
authors = ["Konstantin Stepanov <me@kstep.me>"]

[dependencies.websocket]
git = "https://github.com/kstep/rust-websocket.git"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"
