[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "Client library to work with Pushbullet REST API"
homepage = "https://github.com/kstep/rust-pb"
license = "MIT"
name = "pb"
repository = "https://github.com/kstep/rust-pb.git"
version = "0.2.0"

[dependencies]
hyper = "0.8.1"
rustc-serialize = "0.3.19"
url = "0.5.9"
